--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
+    implementation 'org.springframework.boot:spring-boot-starter-web' // Spring Web
     implementation 'io.springfox:springfox-boot-starter:3.0.0' // swagger
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
